Time: 8 ms (91.00%) | Memory: 49 MB (82.07%) - LeetSync